add user management (create modify and delete) and password modification

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,8 @@ spring.datasource.password=***REMOVED***
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.hbm2ddl.import_files=import-local.sql
 
-spring.security.user.name=admin
-spring.security.user.password=secret
+#File upload
+app.upload.dir=./uploads/images/identityCards
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
