Retrait de la modification de stock lorsqu'on retire une vente. et modification du fonctionnement des recompenses

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,13 +1,13 @@
-spring.application.name=tabarico-backend
-spring.datasource.url=jdbc:mysql://localhost:3306/tabarico?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=***REMOVED***
-spring.config.activate.on-profile=local
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.hbm2ddl.import_files=import-local.sql
-
-#File upload
-app.upload.dir=./uploads/images/identityCards
-
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.web=DEBUG
+#spring.application.name=tabarico-backend
+#spring.datasource.url=jdbc:mysql://localhost:3306/tabarico?serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=***REMOVED***
+#spring.config.activate.on-profile=local
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.properties.hibernate.hbm2ddl.import_files=import-local.sql
+#
+##File upload
+#app.upload.dir=./uploads/images/identityCards
+#
+#logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.web=DEBUG
