--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,7 +1,7 @@
 #spring.application.name=tabarico-backend
 #spring.datasource.url=jdbc:mysql://localhost:3306/tabarico?serverTimezone=UTC
 #spring.datasource.username=root
-#spring.datasource.password=***REMOVED***
+#spring.datasource.password=REMOVED
 #spring.config.activate.on-profile=local
 #spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.properties.hibernate.hbm2ddl.import_files=import-local.sql
